# car_com

./: .gitignore  CMakeLists.txt  CarComConfig.cmake.in  CarComConfigVersion.cmake.in  README.md  library.json
common/: CMakeLists.txt
common/include/car/com/: message.h
common/include/car/com/mc/: cycle_rate.h  interface.h
common/include/car/com/objects/: ackermann_config.h  ackermann_rear_wheel_drive.h  ackermann_state.h  actuators.h  array.h  cmdraw.h  command_ackermann.h  config_ackermann.h  control_config.h  control_parameters.h  description_vehicle.h  error.h  object.h  pose.h  race_car.h  raw_command.h  raw_measurement.h  state.h  state_ackermann.h  text.h  time.h  twist.h  wheel.h
common/include/car/com/pc/: interface.h
common/include/mx/serial/: base.h  interface.h  message.h  objects.h  structs.h
common/src/: CMakeLists.txt
common/src/car/: CMakeLists.txt
common/src/car/com/: CMakeLists.txt  message.cpp
common/src/car/com/example/: CMakeLists.txt  main_com_demo.cpp
common/src/car/com/mc/: cycle_rate.cpp  interface.cpp
common/src/car/com/objects/: object.cpp
common/src/car/com/pc/: CMakeLists.txt  TimeoutSerial.cpp  interface.cpp
common/src/example/: CMakeLists.txt  main_com_demo.cpp
common/src/examples/: CMakeLists.txt
common/src/examples/mc/: main_com.cpp
common/src/examples/pc/: CMakeLists.txt  callback.cpp  main_com_demo.cpp  main_gamepad.cpp
common/src/mx/serial/: CMakeLists.txt  TimeoutSerial.cpp  serial_base.cpp  serial_interface.cpp  serial_message.cpp
common/src/mx/serial/example/: CMakeLists.txt  main_serial_arduino_demo.cpp  main_serial_demo.cpp
